data/ming/f_468_traceback_ming.txt
Traceback (most recent call last):
  File "C:\Users\terry\AppData\Local\Temp\ipykernel_25024\3082211569.py", line 8, in <module>
    res_3 = check_3(file_data)
  File "C:\Users\terry\AppData\Local\Temp\ipykernel_25024\3646643239.py", line 11, in check_3
    tree = ast.parse(code_content)
  File "c:\users\terry\appdata\local\programs\python\python39\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 61
    if __name__ == "__main__":
    ^
IndentationError: expected an indented block
